name:                pure-transform
version:             0.8.0.0
homepage:            purehs.org/doc/pure-transform
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-transform.git

library
  exposed-modules:
      Pure.Data.View.Transform

  build-depends:
    base,
    pure-core,
    pure-lifted,
    pure-txt,
    pure-txt-trie,
    origami-fold

  hs-source-dirs:      src
  default-language:    Haskell2010